Removed debug info and make perl test work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,10 +86,9 @@ jobs:
       - image: debian:8
 
     steps:
-      - checkout
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates libtest-perl-critic-perl
+      - run: apt-get update; apt-get install -y ca-certificates file
       - restore_cache:
           key: deb-{{ .Branch }}
       - run:
@@ -103,8 +102,8 @@ jobs:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
       - run:
-          name: Ensure all perl moduels are installed
-          command: prove t/01_perl_ok.t
+          name: Perl should compile
+          command: for f in $(find /opt/seccubus -type f) ; do  [ $(file $f | grep -i perl | wc -l) -gt 0 ] && perl -c $f ; done
 
   debian9_test:
     docker:
