--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
           command: echo -n >/dev/tcp/localhost/8443
       - run:
           name: Perl should compile
-          command: for f in $(find /opt/seccubus -type f) ; do  [ $(file $f | grep -i perl | wc -l) -gt 0 ] && perl -c $f ; done
+          command: for f in $(find /opt/seccubus -type f) ; do  [ $(file $f | grep -i perl | wc -l) -gt 0 ] && perl -I /opt/seccubus -I /opt/seccubus/lib -c $f ; done
 
   debian9_test:
     docker:
