--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,7 @@ jobs:
     docker:
       - image: alpine
     steps:
+      - run: apk update; apk add ca-certificates
       - restore_cache:
           key: deb-{{ .Branch }}
       - store_artifacts:
