--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: git describe --long > .git-describe
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential debhelper default-jre git
+          command: apt-get update; apt-get -y install build-essential debhelper default-jre-headless git
       - run:
           name: Build
           command: deb/makedeb.sh
