--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,7 +251,7 @@ jobs:
         - PERL5LIB: "."
 
     steps:
-      #- run: apt-get update; apt-get install -y git ssh
+      - run: apt-get install -y git
       - checkout
       - run:
           name: Generate build signature
