--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -291,6 +291,53 @@ jobs:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
 
+  build_fc25:
+    docker:
+      - image: fedora:25
+        environment:
+        - PERL5LIB: "."
+
+    steps:
+      - run: dnf install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: git rev-parse HEAD | tee .git-describe
+      - run:
+          name: Install prerequisite packages
+          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk "perl(ExtUtils::MakeMaker)" gpg rpm-sign
+      - run:
+          name: Build
+          command: rpm/makerpm.sh
+      - save_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+          paths:
+            - "/root/project/build"
+#      - store_artifacts:
+#          path: /root/project/build
+
+  test_fc25:
+    docker:
+      - image: fedora:25
+    steps:
+      - run: dnf install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: git rev-parse HEAD | tee .git-describe
+      - restore_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run: ls -al build
+      - run:
+          name: Install rpm
+          command: dnf install -y build/*fc25*rpm
+      - run:
+          name: Start hypnotoad
+          command: cd /opt/seccubus; hypnotoad seccubus.pl
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
 
 workflows:
 
@@ -335,6 +382,10 @@ workflows:
 
   fedora_package_building:
     jobs:
+      - build_fc25
+      - test_fc25:
+          requires:
+            - build_fc25
       - build_fc26
       - test_fc26:
           requires:
