--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,6 +344,26 @@ jobs:
     steps:
       - run:
           name: Installing prerequisites
+          command: apk update; apk add git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: git rev-parse HEAD | tee .git-describe
+      - restore_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
+      - restore_cache:
+          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
+
+  fedora_upload:
+    docker:
+      - image: alpine
+    steps:
+      - run:
+          name: Installing prerequisites
           command: apk update; apk add alpine-sdk ruby-dev ruby git
       - checkout
       - run:
@@ -354,19 +374,16 @@ jobs:
           command: gem install package_cloud -N
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
-      - store_artifacts:
-          path: /root/project/build
       - run:
           name : Upload to packagecloud.io
-          command: packagecloud push seccubus/seccubus/fedora/25 build/*fc25*rpm
+          command: package_cloud push seccubus/seccubus/fedora/25 build/*fc25*rpm
       - restore_cache:
           key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
       - store_artifacts:
           path: /root/project/build
       - run:
           name : Upload to packagecloud.io
-          command: packagecloud push seccubus/seccubus/fedora/26 build/*fc26*rpm
-      - run: echo "All packages tested and uploaded!!!"
+          command: package_cloud push seccubus/seccubus/fedora/26 build/*fc26*rpm
 
 workflows:
 
@@ -423,3 +440,11 @@ workflows:
           requires:
             - test_fc25
             - test_fc26
+      - fedora_upload:
+          requires:
+            - fedora_ok
+          filters:
+            branches:
+              only:
+                - master
+                - rpm-build
