--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
           command: apt-get update; apt-get -y install build-essential debhelper default-jre-headless git debsigs
@@ -82,8 +82,6 @@ jobs:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
           paths:
             - "/root/project/build"
-#      - store_artifacts:
-#          path: /root/project/build
 
   debian8_test:
     docker:
@@ -92,11 +90,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -115,11 +112,10 @@ jobs:
       - image: debian:9
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -138,11 +134,10 @@ jobs:
       - image: kalilinux/kali-linux-docker:latest
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -163,11 +158,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -186,11 +180,10 @@ jobs:
       - image: ubuntu:16.04
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -211,11 +204,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -233,11 +225,10 @@ jobs:
     docker:
       - image: alpine
     steps:
-      - run: apk update; apk add ca-certificates ssh git
-      - checkout
+      - run: apk update; apk add ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - store_artifacts:
@@ -249,11 +240,10 @@ jobs:
     steps:
       - run:
           name: Installing prerequisites
-          command: apk update; apk add alpine-sdk ruby-dev ruby ssh git
-      - checkout
+          command: apk update; apk add alpine-sdk ruby-dev ruby
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Setup package cloud
           command: gem install package_cloud -N
@@ -271,15 +261,12 @@ jobs:
   build_fc26:
     docker:
       - image: fedora:26
-        environment:
-        - PERL5LIB: "."
-
     steps:
       - run: dnf install -y git
       - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
           command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk "perl(ExtUtils::MakeMaker)" gpg rpm-sign
@@ -290,21 +277,16 @@ jobs:
           key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
           paths:
             - "/root/project/build"
-#      - store_artifacts:
-#          path: /root/project/build
 
   test_fc26:
     docker:
       - image: fedora:26
     steps:
-      - run: dnf install -y git
-      - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
-      - run: ls -al build
       - run:
           name: Install rpm
           command: dnf install -y build/*fc26*rpm
@@ -318,15 +300,12 @@ jobs:
   build_fc25:
     docker:
       - image: fedora:25
-        environment:
-        - PERL5LIB: "."
-
     steps:
       - run: dnf install -y git
       - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
           command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk "perl(ExtUtils::MakeMaker)" gpg rpm-sign
@@ -337,18 +316,14 @@ jobs:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
           paths:
             - "/root/project/build"
-#      - store_artifacts:
-#          path: /root/project/build
 
   test_fc25:
     docker:
       - image: fedora:25
     steps:
-      - run: dnf install -y git
-      - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run: ls -al build
@@ -367,12 +342,8 @@ jobs:
       - image: alpine
     steps:
       - run:
-          name: Installing prerequisites
-          command: apk update; apk add ssh git
-      - checkout
-      - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
       - store_artifacts:
@@ -388,11 +359,10 @@ jobs:
     steps:
       - run:
           name: Installing prerequisites
-          command: apk update; apk add alpine-sdk ruby-dev ruby ssh git
-      - checkout
+          command: apk update; apk add alpine-sdk ruby-dev ruby
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Setup package cloud
           command: gem install package_cloud -N
