--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client git
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client ssh git
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
       - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
@@ -71,7 +71,7 @@ jobs:
       - checkout
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
           command: apt-get update; apt-get -y install build-essential debhelper default-jre-headless git debsigs
@@ -82,8 +82,6 @@ jobs:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
           paths:
             - "/root/project/build"
-#      - store_artifacts:
-#          path: /root/project/build
 
   debian8_test:
     docker:
@@ -92,11 +90,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -115,11 +112,10 @@ jobs:
       - image: debian:9
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -138,11 +134,10 @@ jobs:
       - image: kalilinux/kali-linux-docker:latest
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -163,11 +158,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -186,11 +180,10 @@ jobs:
       - image: ubuntu:16.04
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -211,11 +204,10 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates git ssh
-      - checkout
+      - run: apt-get update; apt-get install -y ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -233,16 +225,160 @@ jobs:
     docker:
       - image: alpine
     steps:
-      - run: apk update; apk add ca-certificates git
-      - checkout
+      - run: apk update; apk add ca-certificates
       - run:
           name: Generate build signature
-          command: git rev-parse HEAD | tee .git-describe
+          command: echo $CIRCLE_SHA1 > .git-describe
       - restore_cache:
           key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
       - store_artifacts:
           path: /root/project/build
-      - run: echo "All packages tested!!!"
+
+  debian_upload:
+    docker:
+      - image: alpine
+    steps:
+      - run:
+          name: Installing prerequisites
+          command: apk update; apk add alpine-sdk ruby-dev ruby
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Setup package cloud
+          command: gem install package_cloud -N
+      - restore_cache:
+          key: deb-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name : Upload to packagecloud.io
+          command: |
+            package_cloud push seccubus/seccubus/debian/jessie build/*.deb
+            package_cloud push seccubus/seccubus/debian/stretch build/*.deb
+            package_cloud push seccubus/seccubus/ubuntu/trusty build/*.deb
+            package_cloud push seccubus/seccubus/ubuntu/zesty build/*.deb
+            package_cloud push seccubus/seccubus/ubuntu/artful build/*.deb
+
+  build_fc26:
+    docker:
+      - image: fedora:26
+    steps:
+      - run: dnf install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Install prerequisite packages
+          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign
+      - run:
+          name: Build
+          command: rpm/makerpm.sh
+      - save_cache:
+          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
+          paths:
+            - "/root/project/build"
+
+  test_fc26:
+    docker:
+      - image: fedora:26
+    steps:
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name: Install rpm
+          command: dnf install -y build/*fc26*rpm
+      - run:
+          name: Start hypnotoad
+          command: cd /opt/seccubus; hypnotoad seccubus.pl
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
+  build_fc25:
+    docker:
+      - image: fedora:25
+    steps:
+      - run: dnf install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Install prerequisite packages
+          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign
+      - run:
+          name: Build
+          command: rpm/makerpm.sh
+      - save_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+          paths:
+            - "/root/project/build"
+
+  test_fc25:
+    docker:
+      - image: fedora:25
+    steps:
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run: ls -al build
+      - run:
+          name: Install rpm
+          command: dnf install -y build/*fc25*rpm
+      - run:
+          name: Start hypnotoad
+          command: cd /opt/seccubus; hypnotoad seccubus.pl
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
+  fedora_ok:
+    docker:
+      - image: alpine
+    steps:
+      - run: apk update; apk add ca-certificates
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
+      - restore_cache:
+          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
+
+  fedora_upload:
+    docker:
+      - image: alpine
+    steps:
+      - run:
+          name: Installing prerequisites
+          command: apk update; apk add ca-certificates alpine-sdk ruby-dev ruby
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Setup package cloud
+          command: gem install package_cloud -N
+      - restore_cache:
+          key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name : Upload to packagecloud.io
+          command: package_cloud push seccubus/seccubus/fedora/25 build/*fc25*rpm
+      - restore_cache:
+          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
+      - run:
+          name : Upload to packagecloud.io
+          command: package_cloud push seccubus/seccubus/fedora/26 build/*fc26*rpm
 
 workflows:
 
@@ -284,4 +420,32 @@ workflows:
             - ubuntu16_test
             - ubuntu17_test
             - kali_test
+      - debian_upload:
+          requires:
+            - debian_ok
+          filters:
+            branches:
+              only:
+                - master
 
+  fedora_package_building:
+    jobs:
+      - build_fc25
+      - test_fc25:
+          requires:
+            - build_fc25
+      - build_fc26
+      - test_fc26:
+          requires:
+            - build_fc26
+      - fedora_ok:
+          requires:
+            - test_fc25
+            - test_fc26
+      - fedora_upload:
+          requires:
+            - fedora_ok
+          filters:
+            branches:
+              only:
+                - master
